welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:9: error: not found: value T
  return T(num-1)
         ^