welcome.lessons.welcome.array.golomb.Golomb.scala.code
def golomb(num:Int): Int = {
	var a: Int =1
  var i: Int =0
  while (i!=num) {
    i= i+1
    a= 1 + golomb((a+1)-golomb(golomb(a)))
  }
    
  return T(num-1)
}